--- a/README.textile
+++ b/README.textile
@@ -7,12 +7,13 @@ h2. Features
 * Clicking an item simply buys it, instead of picking up the item
 * Alt-click buys a full stack (or as close to a full stack as is possible for limited-stock items)
 * Ctrl- and shift-click behave as default (dress-up and paste link, respectively)
+* Recipes you do not yet know are highlighted in blue
+* Items you cannot use are highlighted in red
 
 h2. Un-features
 
 * No support for split-stack purchases, I'm not convinced it's needed.
 * No search... yet
-* No way to red-out known recipes... yet.
 
 h2. Links
 
