--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+3.2.0.2-Beta
+    Add splitstack frame, without the retarded max purchase limits the default vendor frame uses
+    Ensure we always have a default item quality color
+    Fix copper color
+
 3.2.0.1-Beta
     And so it begins...
 
