--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+3.3.0.5-Beta
+    Fix refresh "issue"?
+    Oops, I always forget to register all clicks... stupid bad blizzy defaults
+
 3.2.0.4-Beta
     Increase number of lines in tip scanner
 
