--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+4.0.0.7-Beta
+    Helps to register for drag.
+    Stack-sold items changed with 4.0
+
 3.3.0.6-Beta
     Better recipe highlighting
 
