--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+6.0.0.16-Beta
+    Make known recipes grey
+
 5.0.1.15-Release
     Tagging stable version
 
@@ -52,4 +55,3 @@
 
 3.2.0.1-Beta
     And so it begins...
-
