--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+### 7.0.0.22-Beta
+
+* Fix buying items from vendors using [Tricky Treat]
+  ... and also using any other common non-currency item (i.e. holiday
+  "currency" that stay in your bag and usually expire)
+
+
 ### 7.0.0.21-Beta
 
 * Fix blank list when not loaded on demand
